Added PickUp Action to Customer COntroller

--- a/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup.csproj
@@ -210,6 +210,10 @@
     <Compile Include="Migrations\201709112200091_Added Address Table.Designer.cs">
       <DependentUpon>201709112200091_Added Address Table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709112207182_Added User to Address Table.cs" />
+    <Compile Include="Migrations\201709112207182_Added User to Address Table.Designer.cs">
+      <DependentUpon>201709112207182_Added User to Address Table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
@@ -309,6 +313,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709112200091_Added Address Table.resx">
       <DependentUpon>201709112200091_Added Address Table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709112207182_Added User to Address Table.resx">
+      <DependentUpon>201709112207182_Added User to Address Table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
