--- a/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup.csproj
@@ -218,6 +218,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\ChooseADate.cs" />
+    <Compile Include="Models\DisplayAttribute.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -292,6 +293,7 @@
     <Content Include="Views\Customer\AddAddress.cshtml" />
     <Content Include="Views\Manage\CheckMapRoute.cshtml" />
     <Content Include="Views\Manage\CheckCustomerZip.cshtml" />
+    <Content Include="Views\Customer\ChangeDay.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
