Added Change day in Customer ChangeDay

--- a/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup.csproj
@@ -217,6 +217,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\UpDateDays.cs" />
     <Compile Include="Models\DisplayAttribute.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
