--- a/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup.csproj
@@ -214,9 +214,14 @@
     <Compile Include="Migrations\201709112207182_Added User to Address Table.Designer.cs">
       <DependentUpon>201709112207182_Added User to Address Table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709131357106_Removed UpDateDay and edited Address Models.cs" />
+    <Compile Include="Migrations\201709131357106_Removed UpDateDay and edited Address Models.Designer.cs">
+      <DependentUpon>201709131357106_Removed UpDateDay and edited Address Models.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\Billing.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -283,8 +288,6 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customer\PickUp.cshtml" />
-    <Content Include="Views\Home\MapRoute.cshtml" />
-    <Content Include="Views\Home\CustomerZip.cshtml" />
     <Content Include="Views\Shared\_CustomerLayout.cshtml" />
     <Content Include="Views\Shared\_EmployeeLayout.cshtml" />
     <Content Include="Views\Customer\Billing.cshtml" />
@@ -313,6 +316,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709112207182_Added User to Address Table.resx">
       <DependentUpon>201709112207182_Added User to Address Table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709131357106_Removed UpDateDay and edited Address Models.resx">
+      <DependentUpon>201709131357106_Removed UpDateDay and edited Address Models.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
