Added Employee/Maps and Edited Show Address

--- a/TrashPickup/TrashPickup.csproj
+++ b/TrashPickup/TrashPickup.csproj
@@ -306,6 +306,7 @@
     <Content Include="Views\Customer\ChangeDay.cshtml" />
     <Content Include="Views\Employee\ChangeZip.cshtml" />
     <Content Include="Views\Employee\ShowAddress.cshtml" />
+    <Content Include="Views\Employee\Maps.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
